--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@
             <!-- 這裡貼上你從 Giscus 複製來的 <script> ... </script> -->
             <!-- 下面這是一個範例，請換成你自己的 -->
             <script src="https://giscus.app/client.js"
-                    data-repo="你的GitHub帳號/你的Repo名稱"
+                    data-repo="kkvia/Codetempering"
                     data-repo-id="自動生成的ID"
                     data-category="General"
                     data-category-id="自動生成的ID"
