--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <li><a href="#expectations">我對你的期望</a></li>
             <li><a href="#ending">結束語</a></li>
             <li><a href="#appendix-c">附錄 C：延伸閱讀</a></li>
+                       <!-- 👇 新增這一行 👇 -->
+            <li><a href="#comments">💬 讀者交流區</a></li>
         </ul>
     </nav>
 
@@ -1136,21 +1138,21 @@
             
             <!-- 這裡貼上你從 Giscus 複製來的 <script> ... </script> -->
             <!-- 下面這是一個範例，請換成你自己的 -->
-            <script src="https://giscus.app/client.js"
-                    data-repo="kkvia/Codetempering"
-                    data-repo-id="自動生成的ID"
-                    data-category="General"
-                    data-category-id="自動生成的ID"
-                    data-mapping="pathname"
-                    data-strict="0"
-                    data-reactions-enabled="1"
-                    data-emit-metadata="0"
-                    data-input-position="bottom"
-                    data-theme="preferred_color_scheme"
-                    data-lang="zh-TW"
-                    crossorigin="anonymous"
-                    async>
-            </script>
+<script src="https://giscus.app/client.js"
+        data-repo="kkvia/Codetempering"
+        data-repo-id="R_kgDOQkNIzQ"
+        data-category="General"
+        data-category-id="DIC_kwDOQkNIzc4CzhGr"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-TW"
+        crossorigin="anonymous"
+        async>
+</script>
         </section>
 
         <!-- ========================================== -->
