--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="hero-meta">
                 <span>AUTHOR: Jay</span>
-                <span>VERSION: v2.7 Final</span>
+                <span>VERSION: v2.8 Final</span>
                 <span>STATE: Living Document</span>
             </div>
             <h1>代碼的淬鍊：<br>從需求迷霧至通用基石的<br><span style="color:var(--accent)">「相變」過程</span></h1>
@@ -467,8 +467,62 @@
             </div>
 
             <p>整篇文章的靈魂在於「我」：我有怎樣的行為？我從中間提取了什麼？釋放了什麼？</p>
-            <p>我的真實協作路徑，已拓展為以下四個戰略階段：</p>
             
+            <!-- ========================================== -->
+            <!-- 👇 新增內容開始 (START OF NEW CONTENT) 👇 -->
+            <!-- ========================================== -->
+
+            <div class="note-box" style="border-left-color: var(--accent); background: rgba(var(--accent-rgb), 0.05);">
+                <strong>【讀者提問】</strong><br>
+                「我看完了整套方法論，但我還是不知道從哪裡開始？當我面對一個空白的編輯器，第一句話該說什麼？」
+            </div>
+
+            <p>這是一個最關鍵的問題。很多人以為必須先有了完美的構想才能開始驅使 AI，但事實恰恰相反。</p>
+            <p>我的真實協作路徑，已拓展為包含一個至關重要的<strong>「第零階段」</strong>，這才是讓輪子轉動起來的真正秘密。</p>
+
+            <hr style="border:0; border-top:1px dashed #ccc; margin: 2rem 0;">
+
+            <h3>5.0 第零階段：點火——以 AI 為鏡，洞悉意圖 (Ignition & Calibration)</h3>
+
+            <p><strong>一切的起點，往往不是「指令」，而是「困惑」。</strong></p>
+            <p>當你不知道該做什麼，或者只有一個模糊的焦慮時，這正是 AI 發揮最大價值的時刻。不要急著讓 AI 寫代碼，也不要急著解決問題。</p>
+            <p><strong>你要做的第一件事，是讓 AI 幫你「搞清楚你到底想問什麼」。</strong></p>
+
+            <h4>核心心法：意圖洞悉 (Intent Penetration)</h4>
+            <p>AI 擁有強大的語境分析能力，它可以作為一面鏡子，照出你思維中的邏輯裂縫與矛盾。</p>
+            <p>請隨時把這段<strong>「元提示 (Meta-Prompt)」</strong>放在身邊，作為你與 AI 對話的第一句：</p>
+
+            <blockquote class="highlight-quote" style="border-left: 4px solid #9b59b6;">
+                <strong>🗝️ 啟動咒語：</strong><br>
+                「我現在有一個模糊的想法/問題（描述你的現狀...），但我還沒想清楚具體該怎麼做。<br>
+                請分析我上述的描述，告訴我：<br>
+                1. <strong>你讀到了什麼潛在意圖？</strong><br>
+                2. <strong>我的描述中有沒有邏輯矛盾或語義模糊的地方？</strong><br>
+                3. <strong>請基於你的分析，幫我拓展認知的邊界，並引導我提出一個更好的問題。</strong>」
+            </blockquote>
+
+            <h4>實踐案例：從「不知道」到「精確定義」</h4>
+            <ul>
+                <li><strong>我的原始輸入</strong>：「我覺得現在的 Config 很難用，想要改一下，但不知道怎麼改比較好。」</li>
+                <li><strong>AI 的洞悉與反饋</strong>：
+                    <div style="background: var(--bg-card); padding: 1rem; border-radius: 4px; margin-top: 0.5rem; font-size: 0.9rem;">
+                        「我讀到你的意圖是想要降低配置的維護成本。但我發現你的描述中有矛盾：你既想要『靈活的配置（隨意改）』又想要『強型別的安全性（不寫錯）』。這通常是衝突的。<br>
+                        <strong>拓展認知邊界</strong>：你真正需要的可能不是『修改 Config 類別』，而是一個『配置本體論』——定義什麼是可變的，什麼是靜態的。我們是否應該先討論配置的生命週期？」
+                    </div>
+                </li>
+            </ul>
+
+            <p><strong>這就是「相變」發生的瞬間。</strong></p>
+            <p>透過這個過程，我從一個「不知道想要什麼」的使用者，被 AI 引導成了一個「思考架構」的設計者。</p>
+            <p><strong>結論</strong>：先用 AI 提高你對「自己問題」的認知，當你的意圖被 AI 洞悉並校準後，真正的戰略規劃才正式開始。</p>
+
+            <hr style="border:0; border-top:1px dashed #ccc; margin: 2rem 0;">
+
+            <!-- ========================================== -->
+            <!-- 👆 新增內容結束 (END OF NEW CONTENT) 👆 -->
+            <!-- ========================================== -->
+            
+
             <h3>5.1 第一階段：戰略錨定與缺口分析 (Strategic Anchoring) —— 驅使者的規劃</h3>
             <p>一切的起點往往是模糊的：一個未成形的需求，或是一個「想要的功能」。這時若直接要求生成代碼，往往會得到破碎的結果。</p>
             <p>作為驅使者，我選擇「按兵不動」，而是先利用 AI 的廣度進行戰略規劃：</p>
